# bsoid_test

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
config/: Compiler.cmake  Externals.cmake  FindTBB.cmake  SourceGroups.cmake
docs/: CMakeLists.txt  Doxyfile.in
include/bsoid/: Bsoid.hpp.in  CMakeLists.txt  ShaderPaths.hpp.in
include/bsoid/fields/: CMakeLists.txt  Fields.hpp  Filters.hpp  ImplicitField.hpp  Sphere.hpp  Torus.hpp
include/bsoid/models/: CMakeLists.txt  Models.hpp
include/bsoid/operators/: Blend.hpp  CMakeLists.txt  ImplicitOperator.hpp  Intersection.hpp  Operators.hpp  Transform.hpp  Union.hpp
include/bsoid/polygonizer/: Bsoid.hpp  CMakeLists.txt  Hash.hpp  Lattice.hpp  MarchingCubes.hpp  Polygonizer.hpp  SuperVoxel.hpp  Tables.hpp  Voxel.hpp  uint128_t.hpp
include/bsoid/tree/: BlobTree.hpp  CMakeLists.txt  Node.hpp  Tree.hpp
include/bsoid/visualizer/: CMakeLists.txt  ModelView.hpp  ModelVisualizer.hpp
lib/atlas/: CMakeLists.txt
lib/atlas/config/: FindTBB.cmake
lib/atlas/source/atlas/gl/: Shader.cpp
lib/atlas/source/atlas/tools/: Grid.cpp
lib/atlas/source/atlas/utils/: BBox.cpp
shader/: CMakeLists.txt  Lattice.fs.glsl  Lattice.vs.glsl  LayoutLocations.glsl  Mesh.fs.glsl  Mesh.gs.glsl  Mesh.vs.glsl  UniformMatrices.glsl  Wireframe.fs.glsl
source/: CMakeLists.txt  main.cpp
source/bsoid/models/: CMakeLists.txt  Models.cpp
source/bsoid/polygonizer/: Bsoid.cpp  CMakeLists.txt  Lattice.cpp  MarchingCubes.cpp
source/bsoid/tree/: BlobTree.cpp  CMakeLists.txt  Node.cpp
source/bsoid/visualizer/: CMakeLists.txt  ModelView.cpp  ModelVisualizer.cpp
