set(BSOID_SOURCE_TOP_LIST
    "${BSOID_SOURCE_ROOT}/main.cpp"
    )

add_subdirectory("${BSOID_SOURCE_ROOT}/bsoid/tree")
add_subdirectory("${BSOID_SOURCE_ROOT}/bsoid/polygonizer")
add_subdirectory("${BSOID_SOURCE_ROOT}/bsoid/visualizer")
add_subdirectory("${BSOID_SOURCE_ROOT}/bsoid/models")

set(BSOID_SOURCE_TOP_GROUP ${BSOID_SOURCE_TOP_LIST} PARENT_SCOPE)
set(BSOID_SOURCE_TREE_GROUP ${BSOID_SOURCE_TREE_LIST} PARENT_SCOPE)
set(BSOID_SOURCE_POLYGONIZER_GROUP 
    ${BSOID_SOURCE_POLYGONIZER_LIST} PARENT_SCOPE)
set(BSOID_SOURCE_VISUALIZER_GROUP ${BSOID_SOURCE_VISUALIZER_LIST}
    PARENT_SCOPE)
set(BSOID_SOURCE_MODELS_GROUP ${BSOID_SOURCE_MODELS_LIST}
    PARENT_SCOPE)

set(BSOID_SOURCE_LIST
    ${BSOID_SOURCE_TOP_LIST}
    ${BSOID_SOURCE_TREE_LIST}
    ${BSOID_SOURCE_POLYGONIZER_LIST}
    ${BSOID_SOURCE_VISUALIZER_LIST}
    ${BSOID_SOURCE_MODELS_LIST}
    PARENT_SCOPE)

