set(BSOID_HEADER "${BSOID_INCLUDE_ROOT}/bsoid/Bsoid.hpp")
set(SHADER_HEADER "${BSOID_INCLUDE_ROOT}/bsoid/ShaderPaths.hpp")

if (BSOID_GUI)
    set(BSOID_USE_GUI 1)
else() 
    set(BSOID_USE_GUI 0)
endif()

configure_file("${BSOID_INCLUDE_ROOT}/bsoid/Bsoid.hpp.in" 
    ${BSOID_HEADER})
configure_file("${BSOID_INCLUDE_ROOT}/bsoid/ShaderPaths.hpp.in"
    ${SHADER_HEADER})

set(BSOID_INCLUDE_TOP_LIST
    ${BSOID_HEADER}
    ${SHADER_HEADER}
    )

add_subdirectory("${BSOID_INCLUDE_ROOT}/bsoid/fields")
add_subdirectory("${BSOID_INCLUDE_ROOT}/bsoid/operators")
add_subdirectory("${BSOID_INCLUDE_ROOT}/bsoid/tree")
add_subdirectory("${BSOID_INCLUDE_ROOT}/bsoid/polygonizer")
add_subdirectory("${BSOID_INCLUDE_ROOT}/bsoid/visualizer")
add_subdirectory("${BSOID_INCLUDE_ROOT}/bsoid/models")

set(BSOID_INCLUDE_TOP_GROUP ${BSOID_INCLUDE_TOP_LIST} PARENT_SCOPE)
set(BSOID_INCLUDE_FIELDS_GROUP ${BSOID_INCLUDE_FIELDS_LIST} PARENT_SCOPE)
set(BSOID_INCLUDE_OPERATORS_GROUP ${BSOID_INCLUDE_OPERATORS_LIST}
    PARENT_SCOPE)
set(BSOID_INCLUDE_TREE_GROUP ${BSOID_INCLUDE_TREE_LIST} PARENT_SCOPE)
set(BSOID_INCLUDE_POLYGONIZER_GROUP 
    ${BSOID_INCLUDE_POLYGONIZER_LIST} PARENT_SCOPE)
set(BSOID_INCLUDE_VISUALIZER_GROUP
    ${BSOID_INCLUDE_VISUALIZER_LIST} PARENT_SCOPE)
set(BSOID_INCLUDE_MODELS_GROUP
    ${BSOID_INCLUDE_MODELS_LIST} PARENT_SCOPE)

set(BSOID_INCLUDE_LIST
    ${BSOID_INCLUDE_TOP_LIST}
    ${BSOID_INCLUDE_FIELDS_LIST}
    ${BSOID_INCLUDE_OPERATORS_LIST}
    ${BSOID_INCLUDE_TREE_LIST}
    ${BSOID_INCLUDE_POLYGONIZER_LIST}
    ${BSOID_INCLUDE_VISUALIZER_LIST}
    ${BSOID_INCLUDE_MODELS_LIST}
    PARENT_SCOPE)
